Clean up lots of warnings.